Use "itemize" environment

--- a/tex/p009.tex
+++ b/tex/p009.tex
@@ -23,7 +23,7 @@
 \vs p009 1:7 \pc And herein is an infinite mystery: That the Infinite simultaneously revealed his infinity in the Son and as Paradise, and then there springs into existence a being equal to God in divinity, reflective of the Son’s spiritual nature, and capable of activating the Paradise pattern, a being provisionally subordinate in sovereignty but in many ways apparently the most versatile in \bibemph{action.} And such apparent superiority in action is disclosed in an attribute of the Third Source and Centre which is superior even to physical gravity --- the universal manifestation of the Isle of Paradise.
 \vs p009 1:8 In addition to this supercontrol of energy and things physical, the Infinite Spirit is superbly endowed with those attributes of patience, mercy, and love which are so exquisitely revealed in his spiritual ministry. The Spirit is supremely competent to minister love and to overshadow justice with mercy. God the Spirit possesses all the supernal kindness and merciful affection of the Original and Eternal Son. The universe of your origin is being forged out between the anvil of justice and the hammer of suffering; but those who wield the hammer are the children of mercy, the spirit offspring of the Infinite Spirit.
 \usection{The Omnipresent Spirit}
-\vs p009 2:1 God is spirit in a threefold sense: He himself is spirit; in his Son he appears as spirit without qualification; in the Conjoint Actor, as spirit allied with mind. And in addition to these spiritual realities, we think we discern levels of experiential spirit phenomena --- the spirits of the Supreme Being, Ultimate Deity, and Deity Absolute.
+\vs p009 2:1 God is spirit in a threefold sense: \begin{itemize}\item He himself is spirit; \item in his Son he appears as spirit without qualification; \item in the Conjoint Actor, as spirit allied with mind.\end{itemize} And in addition to these spiritual realities, we think we discern levels of experiential spirit phenomena --- the spirits of the Supreme Being, Ultimate Deity, and Deity Absolute.
 \vs p009 2:2 The Infinite Spirit is just as much a complement of the Eternal Son as the Son is a complement of the Universal Father. The Eternal Son is a spiritualized personalization of the Father; the Infinite Spirit is a personalized spiritualization of the Eternal Son and the Universal Father.
 \vs p009 2:3 There are many untrammelled lines of spiritual force and sources of supermaterial power linking the people of Urantia directly with the Deities of Paradise. There exist the connection of the Thought Adjusters direct with the Universal Father, the widespread influence of the spiritual\hyp{}gravity urge of the Eternal Son, and the spiritual presence of the Conjoint Creator. There is a difference in function between the spirit of the Son and the spirit of the Spirit. The Third Person in his spiritual ministry may function as mind plus spirit or as spirit alone.
 \vs p009 2:4 In addition to these Paradise presences, Urantians benefit by the spiritual influences and activities of the local and the superuniverse, with their almost endless array of loving personalities who ever lead the true of purpose and the honest of heart upward and inward towards the ideals of divinity and the goal of supreme perfection.
