--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -35,9 +35,6 @@
 % comment out for NO page break AFTER Part title
 \tunemarkuptag{afterpartnewpage}
 
-% comment out for NO page break before each Paper
-\tunemarkuptag{papernewpage}
-
 % comment out for public PDF build
 \tunemarkuptag{private}
 
@@ -168,7 +165,7 @@
 
 \newcommand{\subtitlefont}{\Large}
 
-\renewcommand{\author}[1]{\thispagestyle{empty}\begin{center}\authorfont\textcolor{ubblue}{#1}\end{center}\fancyhead[CE]{\bibheadfont\MakeUppercase{#1}}}
+\renewcommand{\author}[1]{\begin{center}\authorfont\textcolor{ubblue}{#1}\end{center}\fancyhead[CE]{\bibheadfont\MakeUppercase{#1}}}
 
 \newcommand{\upartheader}[1]{%
    \par\vspace{3ex}\pagebreak[3]%
@@ -655,9 +652,6 @@
  \def\fnst#1{\ignorespaces$^*$\stepcounter{nfnst}\fn{#1}}
 }
 
-\newlength{\minitocafterskip}
-\setlength{\minitocafterskip}{-1ex}
-
 % for mini-TOC of each paper
 \newcounter{uminitocnum}
 
@@ -670,7 +664,7 @@
     \bibsectitlefont
     \makebox[0.08\linewidth][r]{\theuminitocnum.\,}%
     \makebox[0.85\linewidth][l]{\uppercase{#1}\bibdf}%
-    \makebox[0.06\linewidth][r]{\bibpr{p\thepaper_\theuminitocnum}}\\[-0.5ex]%
+    \makebox[0.06\linewidth][r]{\bibpr{p\thepaper_\theuminitocnum}}\\%
    }%
 }
 }
@@ -711,7 +705,6 @@
 \renewcommand{\bibtocfont}{\fontsize{10.5}{17}\selectfont}
 \newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{11}{13}\selectfont}
 \renewcommand{\footnotesize}{\fontspec[WordSpace={1.0,4.0,0.1},Mapping=tex-text]{\urantiamainfont}\fontsize{13}{15}\selectfont}
-\setlength{\minitocafterskip}{-1.2ex}
 }
 
 \tunemarkup{pghanlin}{%
@@ -736,7 +729,6 @@
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{14}{17}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{10}{17}\selectfont}
 \newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{8}{9}\selectfont}
-\setlength{\minitocafterskip}{-1.5ex}
 \renewcommand{\footnotesize}{\fontsize{14}{17}\selectfont}
 \renewcommand{\bibbookend}{\fontsize{16}{19}\selectfont}
 \renewcommand{\urantiamainfontsize}{16/19}
@@ -767,7 +759,6 @@
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{11}{11}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{7.7}{14}\selectfont}
 \newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{9}{9}\selectfont}
-\setlength{\minitocafterskip}{-0.5ex}
 \newcommand{\bibbookend}{\fontsize{16}{18}\selectfont}
 \newcommand{\urantiamainfontsize}{16/18}
 \renewcommand{\footnotesize}{\fontsize{13}{15}\selectfont}
@@ -803,7 +794,6 @@
 \renewcommand{\bibtocfont}{\fontsize{7}{11}\selectfont}
 \newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{10}{10}\selectfont}
 \renewcommand{\footnotesize}{\fontspec[WordSpace={1.0,4.0,0.1},Mapping=tex-text]{\urantiamainfont}\fontsize{14}{16}\selectfont}
-\setlength{\minitocafterskip}{-0.5ex}
 \newcommand{\bibbookend}{\fontsize{18}{20}\selectfont}
 \newcommand{\urantiamainfontsize}{18/20}
 \newcommand{\authorfont}{\authorfontfamily\fontsize{25}{9}\bfseries\itshape}%
@@ -833,7 +823,6 @@
 \newcommand{\subfont}{\fontsize{14}{17}\itshape}
 \newcommand{\parttitlefontsize}{\LARGE}
 \newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{11}{13}\selectfont}
-\setlength{\minitocafterskip}{-0.15ex}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
 \renewcommand{\subtitlefont}{\sectiontitlefont\fontsize{15}{19}\selectfont}
 \newcommand{\bibbookend}{\fontsize{16.5}{19}\selectfont}
@@ -872,7 +861,6 @@
 \newcommand{\bibbookend}{\fontsize{19}{21}\selectfont}
 \newcommand{\urantiamainfontsize}{19/21}
 \renewcommand{\footnotesize}{\fontspec[WordSpace={1.0,4.0,0.1},Mapping=tex-text]{\urantiamainfont}\fontsize{16}{18}\selectfont}
-\setlength{\minitocafterskip}{-0.15ex}
 \newcommand{\authorfont}{\authorfontfamily\fontsize{22}{9}\bfseries\itshape}%
 }
 
@@ -906,7 +894,6 @@
 \newcommand{\bibbookend}{\fontsize{19}{21}\selectfont}
 \newcommand{\urantiamainfontsize}{19/21}
 \renewcommand{\footnotesize}{\fontspec[WordSpace={1.0,4.0,0.1},Mapping=tex-text]{\urantiamainfont}\fontsize{16}{18}\selectfont}
-\setlength{\minitocafterskip}{-0.15ex}
 \newcommand{\authorfont}{\authorfontfamily\fontsize{19}{9}\bfseries\itshape}%
 }
 
@@ -941,7 +928,6 @@
 \renewcommand{\bibfnchapsize}{\normalsize\bfseries}
 \renewcommand{\bibfnvssize}{\small\bfseries}
 \newcommand{\bibtocsuperheadfont}{\fontsize{20}{22}\selectfont}
-\setlength{\minitocafterskip}{-0.5ex}
 }
 
 \tunemarkup{pgcrownq}{%
@@ -973,7 +959,6 @@
 \renewcommand{\bibfnchapsize}{\large\bfseries}
 \renewcommand{\bibfnvssize}{\normalsize\bfseries}
 \newcommand{\bibtocsuperheadfont}{\fontsize{20}{22}\selectfont}
-\setlength{\minitocafterskip}{-0.5ex}
 }
 
 \tunemarkup{pgkindledx}{%
@@ -1004,7 +989,6 @@
 \renewcommand{\bibfnchapsize}{\Large\bfseries}
 \renewcommand{\bibfnvssize}{\large\bfseries}
 \newcommand{\bibtocsuperheadfont}{\fontsize{20}{22}\selectfont}
-\setlength{\minitocafterskip}{-0.5ex}
 \newcommand{\authorfont}{\authorfontfamily\fontsize{22}{9}\bfseries\itshape}%
 }
 
@@ -1067,8 +1051,7 @@
 \newcommand{\myurl}[1]{\href{#1}{#1}}
 
 \newcommand{\upaper}[2]{%
-\tunemarkup{papernewpage}{\newpage}%
-\thispagestyle{empty}%
+\newpage\thispagestyle{empty}%
 \setcounter{paper}{#1}%
 \setcounter{secnum}{0}%
 \setcounter{uminitocnum}{0}
