--- a/tex/p013.tex
+++ b/tex/p013.tex
@@ -19,7 +19,7 @@
 \vs p013 1:5 \pc \bibemph{The secrets of Divinington} include the secret of the bestowal and mission of Thought Adjusters. Their nature, origin, and the technique of their contact with the lowly creatures of the evolutionary worlds is a secret of this Paradise sphere. These amazing transactions do not personally concern the rest of us, and therefore do the Deities deem it proper to withhold certain features of this great and divine ministry from our full understanding. In so far as we come in contact with this phase of divine activity, we are permitted full knowledge of these transactions, but concerning the intimate details of this great bestowal we are not fully informed.
 \vs p013 1:6 This sphere also holds the secrets of the nature, purpose, and activities of all other forms of Father fragments, of the Gravity Messengers, and of hosts of other beings unrevealed to you. It is highly probable that those truths pertaining to Divinington which are withheld from me, if revealed, would merely confuse and handicap me in my present work, and still again, perhaps they are beyond the conceptual capacity of my order of being.
 \vs p013 1:7 \ublistelem{2.}\bibnobreakspace SONARINGTON. This sphere is the “bosom of the Son,” the personal receiving world of the Eternal Son. It is the Paradise headquarters of the descending and ascending Sons of God when, and after, they are fully accredited and finally approved. This world is the Paradise home for all Sons of the Eternal Son and of his co\hyp{}ordinate and associate Sons. There are numerous orders of divine sonship attached to this supernal abode which have not been revealed to mortals since they are not concerned with the plans of the ascension scheme of human spiritual progression through the universes and on to Paradise.
-\vs p013 1:8 \pc \bibemph{The secrets of Sonarington} include the secret of the incarnation of the divine Sons. When a Son of God becomes a Son of Man, is literally born of woman, as occurred on your world 1900 years ago, it is a universal mystery. It is occurring right along throughout the universes, and it is a Sonarington secret of divine sonship. The Adjusters are a mystery of God the Father. The incarnation of the divine Sons is a mystery of God the Son; it is a secret locked up in the seventh sector of Sonarington, a realm penetrated by none save those who have personally passed through this unique experience. Only those phases of incarnation having to do with your ascension career have been brought to your notice. There are many other phases of the mystery of the incarnation of the Paradise Sons of unrevealed types on missions of universe service which are undisclosed to you. And there are still other Sonarington mysteries.
+\vs p013 1:8 \pc \bibemph{The secrets of Sonarington} include the secret of the incarnation of the divine Sons. When a Son of God becomes a Son of Man, is literally born of woman, as occurred on your world 1900 years ago\fnst{By the time of working on this book (2021) this event occurred 2027 years ago.}, it is a universal mystery. It is occurring right along throughout the universes, and it is a Sonarington secret of divine sonship. The Adjusters are a mystery of God the Father. The incarnation of the divine Sons is a mystery of God the Son; it is a secret locked up in the seventh sector of Sonarington, a realm penetrated by none save those who have personally passed through this unique experience. Only those phases of incarnation having to do with your ascension career have been brought to your notice. There are many other phases of the mystery of the incarnation of the Paradise Sons of unrevealed types on missions of universe service which are undisclosed to you. And there are still other Sonarington mysteries.
 \vs p013 1:9 \ublistelem{3.}\bibnobreakspace SPIRITINGTON. This world is the “bosom of the Spirit,” the Paradise home of the high beings that exclusively represent the Infinite Spirit. Here forgather the Seven Master Spirits and certain of their offspring from all universes. At this celestial abode may also be found numerous unrevealed orders of spirit personalities, beings assigned to the manifold activities of the universe not associated with the plans of upstepping the mortal creatures of time to the Paradise levels of eternity.
 \vs p013 1:10 \pc \bibemph{The secrets of Spiritington} involve the impenetrable mysteries of reflectivity. We tell you of the vast and universal phenomenon of reflectivity, more particularly as it is operative on the headquarters worlds of the seven superuniverses, but we never fully explain this phenomenon, for we do not fully understand it. Much, very much, we do comprehend, but many basic details are still mysterious to us. Reflectivity is a secret of God the Spirit. You have been instructed concerning reflectivity functions in relation to the ascension scheme of mortal survival, and it does so operate, but reflectivity is also an indispensable feature of the normal working of numerous other phases of universe occupation. This endowment of the Infinite Spirit is also utilized in channels other than those of intelligence gathering and information dissemination. And there are other secrets of Spiritington.
 \vs p013 1:11 \ublistelem{4.}\bibnobreakspace VICEGERINGTON. This planet is the “bosom of the Father and the Son” and is the secret sphere of certain unrevealed beings who take origin by the acts of the Father and the Son. This is also the Paradise home of many glorified beings of complex ancestry, those whose origin is complicated because of the many diverse techniques operative in the seven superuniverses. Many groups of beings forgather on this world whose identity has not been revealed to Urantia mortals.
