--- a/tex/p016.tex
+++ b/tex/p016.tex
@@ -138,3 +138,13 @@
 \vsetoff
 \vs p016 9:16 [Sponsored by a Universal Censor from Uversa.]
 \quizlink
+\begin{thebibliography}{100}
+\bibitem{Griffiths1}
+Rees Griffiths.
+{<<God in Idea and Experience, Or, The A Priori Elements of the Religious Consciousness: An Epistemological Study>>.}
+{\em Edinburgh: T. \&\ T. Clark}, 1931.
+\bibitem{Schoen1}
+Max Schoen.
+{<<A Scientific Basis for Moral Action>>.}
+{\em The Scientific Monthly, Vol.\,48, No.\,3}, March 1939.
+\end{thebibliography}
