Add a few more hyphenation exceptions

--- a/tex/urantia-hyphen-en.tex
+++ b/tex/urantia-hyphen-en.tex
@@ -1,4 +1,15 @@
 \hyphenation{%
+Hel-le-nize
+Hel-le-nized
+moth-er
+Moth-er
+sub-se-quent-ly
+Ta-ri-chea
+mo-no-the-ism
+equip-ped
+arch-re-bel
+arch-re-bels
+me-ta-mor-pho-sis
 witch-craft
 Chro-nol-dek
 Chro-nol-deks
@@ -101,7 +112,6 @@ al-so
 Eden-tia
 su-per-breath-ers
 su-per-breath-er
-where-by
 Beth-a-ny
 sur-round-ed
 su-preme-ly
